--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,8 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.15.2",
 		"@reduxjs/toolkit": "^2.0.1",
-		"classnames": "^2.5.0",
+		"clsx": "^2.1.1",
 		"ky": "^1.1.3",
-		"package.json": "^2.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.12.0",
