--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,7 +24,7 @@
       "@/*": ["*"],
       "@root/*": ["../../*"]
     },
-    "typeRoots": ["node_modules/@types", "src/types"],
+    "typeRoots": ["node_modules/@types", "src/types"]
   },
   "include": ["src", "src/types/store.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
