--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
 		"react-icons": "^4.12.0",
 		"react-redux": "^9.0.4",
 		"react-router-dom": "^6.21.1",
-		"react-toastify": "^9.1.3"
+		"react-toastify": "^9.1.3",
+		"styled-components": "^6.1.12"
 	},
 	"devDependencies": {
 		"@types/classnames": "^2.3.1",
