--- a/frontend-crm/package.json
+++ b/frontend-crm/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.2",
     "@mui/joy": "^5.0.0-beta.20",
-    "@mui/material": "^5.15.2",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@tabler/icons-react": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
