--- a/frontend-crm/tsconfig.json
+++ b/frontend-crm/tsconfig.json
@@ -21,8 +21,10 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": "./src",
     "paths": {
-      "@/*": ["*"]
-    }
+      "@/*": ["*"],
+      "@/root": ["../../*"],
+    },
+    "typeRoots": ["node_modules/@types", "src/types"],
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
