--- a/frontend-crm/package.json
+++ b/frontend-crm/package.json
@@ -15,6 +15,7 @@
     "@mui/joy": "^5.0.0-beta.20",
     "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.11.0",
+    "ahooks": "^3.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
