--- a/frontend-crm/tsconfig.json
+++ b/frontend-crm/tsconfig.json
@@ -22,7 +22,7 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"],
-      "@/root": ["../../*"],
+      "@root/*": ["../../*"]
     },
     "typeRoots": ["node_modules/@types", "src/types"],
   },
