--- a/frontend-crm/package.json
+++ b/frontend-crm/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
+    "react-image-picker-editor": "^1.3.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.21.1"
   },
