--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"ky": "^1.1.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.52.2",
 		"react-icons": "^4.12.0",
 		"react-redux": "^9.0.4",
 		"react-router-dom": "^6.21.1",
