add backend and remove not used code

--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -2,4 +2,4 @@
 POSTGRES_USER=postgres
 POSTGRES_DB=postgres
 POSTGRES_PASSWORD=postgres
-SECRET_KEY=SECRET_KEYblabalaldskadsfjlkadsfjkl331423
+SECRET_KEY=SECRET_KEY
