--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,19 +7,19 @@ volumes:
   .:
 
 services:
-  # web:
-  #   build: .
-  #   container_name: luckycourse_app
-  #   command: python manage.py runserver 0.0.0.0:8000
-  #   env_file:
-  #     - .env
-  #   volumes:
-  #     - static_volume:/web/app/static
-  #     - .:/web
-  #   expose:
-  #     - 4000
-  #   depends_on:
-  #     - db
+  web:
+    build: .
+    container_name: luckycourse_app
+    command: python manage.py runserver 0.0.0.0:8000
+    env_file:
+      - .env
+    volumes:
+      - static_volume:/web/app/static
+      - .:/web
+    expose:
+      - 4000
+    depends_on:
+      - db
 
   db:
     image: postgres
